<resources>
    <string name="app_name">Floral Fete</string>
    <string name="app_name2">Floral Fete Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="signup_title">Sign Up</string>
    <string name="signup_text1">First Name</string>
    <string name="signup_text2">Last Name</string>
    <string name="signup_text3">Mobile</string>
    <string name="signup_text4">Email</string>
    <string name="signup_text5">Password</string>
    <string name="signup_text6">Confirm Password</string>
    <string name="signup_text7">Already Have an Account? Login</string>


    <string name="signin_title">Sign In</string>
    <string name="signin_text1">Email</string>
    <string name="signin_text2">Password</string>
    <string name="signin_text3">New to Floral Fete? Signup</string>
    <string name="signin_text4">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_text1">Flower Categories</string>
    <string name="home_text2">Best Sellers</string>
    <string name="home_text3">Search Flowers...</string>


    <string name="cart_title">Cart</string>
    <string name="cart_text1">Your Cart is Empty</string>


    <string name="profile_text1">About Floral Fete</string>


    <string name="update_profile_text1">Old Passwords</string>
    <string name="update_profile_text2">New Passwords</string>
    <string name="update_profile_text3">Upload a Profile Picture</string>
    <string name="update_profile_text4">Update Profile</string>


    <string name="admin_panel_header_text1">Admin</string>
    <string name="admin_panel_header_text2">admin@gmail.com</string>

    <string name="single_product_text1">Select Delivery Date:</string>
    <string name="single_product_text2">Flower Category:</string>
    <string name="single_product_text3">Description</string>
    <string name="single_product_text4">Customer Reviews</string>

    <string name="address_text1">Address</string>
    <string name="address_text2">Change Address</string>

    <string name="checkout_text1">Checkout</string>

    <string name="wishlist_text1">Your Wishlist is Empty</string>
    <string name="wishlist_text2">Wishlist</string>

    <string name="about_us_text1">About Us</string>
    <string name="about_us_text2">Location</string>
    <string name="about_us_text3">Welcome to Floral Fete, your one-stop destination for fresh,
        handcrafted floral arrangements. Whether you’re celebrating a special occasion,
        expressing your love, or simply brightening someone’s day,
        we bring nature’s beauty straight to your doorstep</string>
    <string name="about_us_text4">Floral Fete – Where Every Petal Tells a Story!</string>


    <string name="admin_sigin_text1">Admin SignIn</string>
    <string name="admin_sigin_text2">Email</string>
    <string name="admin_sigin_text3">Password</string>

    <string name="forgot_password_text1">Password</string>
    <string name="forgot_password_text2">Send me a Code</string>
    <string name="forgot_password_text3">Enter Code</string>
    <string name="forgot_password_text4">New Password</string>
    <string name="forgot_password_text5">Update Password</string>

    <string-array name="categories_array">
        <item>All</item>
        <item>roses</item>
        <item>sunflowers</item>
        <item>tulips</item>
    </string-array>

    <string-array name="occasions_array">
        <item>All</item>
        <item>party</item>
        <item>weddings</item>

    </string-array>

    <string-array name="sort_options">
        <item>Default</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>


</resources>