<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_flower"
    tools:context=".ForgotPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotp_edittext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherryswash_regular"
            android:hint="@string/signin_text1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotp_button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/theme_color"
        android:fontFamily="@font/cherryswash_bold"
        android:padding="15dp"
        android:text="@string/forgot_password_text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout18" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotp_button1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotp_edittext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherryswash_regular"
            android:hint="@string/forgot_password_text3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout19"
        app:layout_constraintTop_toBottomOf="@+id/forgotp_button1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotp_edittext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherryswash_regular"
            android:hint="@string/forgot_password_text4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotp_button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/theme_color"
        android:fontFamily="@font/cherryswash_bold"
        android:padding="15dp"
        android:text="@string/forgot_password_text5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout19" />
</androidx.constraintlayout.widget.ConstraintLayout>